--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
